add mongoDB authentication

--- a/StudyfiedBackend/appsettings.json
+++ b/StudyfiedBackend/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "ConnectionURI": "mongodb+srv://saber:saber@fabeure.tsdcgd5.mongodb.net/?retryWrites=true&w=majority&appName=Fabeure",
+    "DatabaseName": "Studyfied",
+    "CollectionName": "Users"
+  }
 }
