--- a/.github/workflows/run-unit-test.yml
+++ b/.github/workflows/run-unit-test.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: [ '8.x.x' ]
+        dotnet-version: [ '8.0.x' ]
 
     steps:
       - name: Checkout Main 
