OOOOOOHHHHH YA SABER

--- a/.github/workflows/run-unit-test.yml
+++ b/.github/workflows/run-unit-test.yml
@@ -24,4 +24,4 @@ jobs:
         run: dotnet --version 
 
       - name: Run Unit Tests
-        run: dotnet test --no-restore --verbosity normal
+        run: dotnet test
