--- a/.github/workflows/merge-workflow.yml
+++ b/.github/workflows/merge-workflow.yml
@@ -1,20 +1,21 @@
-name : Merge to dev 
+name : Merge dev to main 
 
 on : 
-   workflow_dispatch
+  workflow_dispatch
+  
 
 jobs:
   merge-to-dev:
-    name: merge addwf -> dev     
+    name: merge dev -> main     
     runs-on: ubuntu-latest
     
     steps:
-        - name : merge addwf to dev
+        - name : merge dev to main
           uses: tukasz/direct-merge-action@master
           with:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            source-branch: AddWorkFlows
-            target-branch: dev
+            source-branch: dev
+            target-branch: main
             commit-message: "Auto merge"
          
 
