--- a/.github/workflows/pull-request-wf.yml
+++ b/.github/workflows/pull-request-wf.yml
@@ -10,9 +10,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet-version: [ '8.0.x' ]
+
     steps:
       - name: Checkout Source Branch  
         uses: actions/checkout@v4
@@ -22,7 +20,7 @@ jobs:
       - name: Setup dotnet ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ matrix.dotnet-version }}
+          dotnet-version: '8.0.x'
 
       - name: Run Unit Tests
         run: dotnet test
