--- a/.github/workflows/run-unit-test.yml
+++ b/.github/workflows/run-unit-test.yml
@@ -5,12 +5,9 @@ on:
 
 jobs:
   build:
-
+    name: Build and run unit tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet-version: [ '8.0.x' ]
-
+    
     steps:
       - name: Checkout Branch 
         uses: actions/checkout@v4
