add BaseResponse and FlashCards service

--- a/StudyfiedBackend/appsettings.json
+++ b/StudyfiedBackend/appsettings.json
@@ -10,5 +10,7 @@
     "ConnectionURI": "mongodb+srv://saber:saber@fabeure.tsdcgd5.mongodb.net/?retryWrites=true&w=majority&appName=Fabeure",
     "DatabaseName": "Studyfied",
     "CollectionName": "Users"
-  }
+  },
+
+  "GeminiApiKey": "AIzaSyAqCpD_P2iGW9-Bc2LfgQszxLEFo0KGue0"
 }
