--- a/StudyfiedBackendUnitTests/StudyfiedBackendUnitTests.csproj
+++ b/StudyfiedBackendUnitTests/StudyfiedBackendUnitTests.csproj
@@ -14,7 +14,9 @@
     <PackageReference Include="FakeItEasy" Version="8.1.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageReference Include="Mongo2Go" Version="3.1.3" />
     <PackageReference Include="MongoDB.Bson" Version="2.24.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
