--- a/StudyfiedBackendUnitTests/StudyfiedBackendUnitTests.csproj
+++ b/StudyfiedBackendUnitTests/StudyfiedBackendUnitTests.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\StudyfiedBackend\StudyfiedBackend.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Tests\Controller\User\" />
+  </ItemGroup>
+
 </Project>
