--- a/StudyfiedBackend/appsettings.json
+++ b/StudyfiedBackend/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "MongoDB": {
-    "ConnectionURI": "mongodb+srv://saber:saber@fabeure.tsdcgd5.mongodb.net/?retryWrites=true&w=majority&appName=Fabeure",
-    "DatabaseName": "Studyfied",
+    "ConnectionURI": "mongodb+srv://StudyUser:StudyUser@studyfluxdb.f4b53e1.mongodb.net/?retryWrites=true&w=majority&appName=StudyFluxDB",
+    "DatabaseName": "StudyFluxDB",
     "CollectionName": "Users"
   },
 
