--- a/StudyfiedBackend/appsettings.json
+++ b/StudyfiedBackend/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "MongoDB": {
-        "ConnectionURI": "mongodb+srv://StudyUser:StudyUser@studyfluxdb.f4b53e1.mongodb.net/?retryWrites=true&w=majority&appName=StudyFluxDB",
+        "ConnectionURI": "mongodb+srv://Fabeure:Fabeure@fabeure.tsdcgd5.mongodb.net/?retryWrites=true&w=majority&appName=StudyFluxDB",
         "DatabaseName": "StudyFluxDB",
         "CollectionName": "Users"
     },
