--- a/StudyfiedBackend/appsettings.json
+++ b/StudyfiedBackend/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
     "MongoDB": {
         "ConnectionURI": "mongodb+srv://Fabeure:Fabeure@fabeure.tsdcgd5.mongodb.net/?retryWrites=true&w=majority&appName=Fabeure",
-        "DatabaseName": "StudyFluxDB",
+        "DatabaseName": "Studyfied",
         "CollectionName": "Users"
     },
 
